# print-wizard

./: .gitignore  README.md  print.py  pyproject.toml  setup.py
printwizard/: __init__.py  logger.py
src/printwizard/: __init__.py  logger.py  set_wizard_config.py
src/printwizard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_logger.py
