[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "printwizard"
version = "0.1.2"
authors = [
  { name="GoodBoyNeon", email="contact@neon.is-a.dev" },
]
description = "A minimal yet colorful alternative to the print() function in Python, with methods like success(), warn(), info() and error()"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/goodboyneon/print-wizard"
"Bug Tracker" = "https://github.com/goodboyneon/print-wizard/issues"
